// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartOverComponentFactory AssessmentStartOverFactory getStartOverComponent 1`] = `
<StartOverDropdown
  dropdownDirection="down"
  testName="the title"
/>
`;

exports[`StartOverComponentFactory AssessmentStartOverFactory getStartOverMenuItem 1`] = `
<div
  role="menuitem"
>
  <StartOverDropdown
    dropdownDirection="left"
    testName="the title"
  />
</div>
`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverComponent renders scanning is false => component matches snapshot 1`] = `
<InsightsCommandButton
  className="startOverMenuItem"
  data-automation-id="start-over"
  disabled={false}
  iconProps={
    {
      "className": "startOverMenuItemIcon",
      "iconName": "Refresh",
    }
  }
  onClick={[Function]}
  text="Start over"
/>
`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverComponent renders scanning is true => component matches snapshot 1`] = `
<InsightsCommandButton
  className="startOverMenuItem"
  data-automation-id="start-over"
  disabled={true}
  iconProps={
    {
      "className": "startOverMenuItemIcon",
      "iconName": "Refresh",
    }
  }
  onClick={[Function]}
  text="Start over"
/>
`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverMenuItem renders scanning is false => component matches snapshot 1`] = `
{
  "className": "startOverMenuItem",
  "data-automation-id": "start-over",
  "disabled": false,
  "iconProps": {
    "className": "startOverMenuItemIcon",
    "iconName": "Refresh",
  },
  "onClick": [Function],
  "text": "Start over",
}
`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverMenuItem renders scanning is true => component matches snapshot 1`] = `
{
  "className": "startOverMenuItem",
  "data-automation-id": "start-over",
  "disabled": true,
  "iconProps": {
    "className": "startOverMenuItemIcon",
    "iconName": "Refresh",
  },
  "onClick": [Function],
  "text": "Start over",
}
`;
